[gd_scene load_steps=2 format=3 uid="uid://b4rouq0n6sape"]

[ext_resource type="Script" path="res://GUI/new_bot_game.gd" id="1_xy3rq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xy3rq")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -122.5
offset_right = 96.0
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.042, 1)

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Mélység
"

[node name="HSlider" type="HSlider" parent="VBoxContainer2"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Játékos csapat
"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer2"]
layout_mode = 2
icon_alignment = 1
vertical_icon_alignment = 0

[node name="start" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Indítás"

[node name="back" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Vissza"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.5
offset_right = 130.5
offset_bottom = 49.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Gép elleni játék
"

[connection signal="changed" from="VBoxContainer2/HSlider" to="." method="_on_h_slider_changed"]
[connection signal="pressed" from="VBoxContainer2/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer2/back" to="." method="_on_back_pressed"]
